[gd_scene load_steps=5 format=3 uid="uid://cpgp44opbbueu"]

[ext_resource type="Script" uid="uid://da4maxq5di60f" path="res://instances/signs/sign.gd" id="1_1dr6t"]
[ext_resource type="Texture2D" uid="uid://dsfiksg6dvek" path="res://assets/2d/Tiles/Transparent/tile_0077.png" id="2_u2ygs"]
[ext_resource type="Texture2D" uid="uid://5e33iirs5hwq" path="res://assets/2d/Tiles/Transparent/tile_0001.png" id="3_26ya4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_57c2y"]
size = Vector2(58, 32)

[node name="Sign" type="Area2D"]
script = ExtResource("1_1dr6t")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("2_u2ygs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_57c2y")

[node name="ExclamationMark" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -28)
texture = ExtResource("3_26ya4")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
